[project]
name="hydra-server"
description="A JSON RPC web server to interact with the Hydra Platform Base Libary"
readme="README.rst"
dynamic = ["version"]
authors = [
  {name = "Stephen Knox", email = "knoxsp@gmail.com"},
]
requires-python=">=3.10"
license-files = ["LICENSE"]
dependencies=[
"spyne >= 2.13.2-alpha",
"hydra-base",
"lxml",
"click"
]


[project.urls]
Documentation="https://hydraplatform.org"
Repository="https://github.com/hydraplatform/hydra-server"

[build-system]
requires = ["setuptools>=77", "setuptools_scm", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"

[project.scripts]
hydra-server = "hydra_server.cli:start_cli"